--- a/SplaShooter.vcxproj
+++ b/SplaShooter.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="Bg.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DirectX11.cpp" />
     <ClCompile Include="Fps.cpp" />
     <ClCompile Include="InputDevice.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Audio.h" />
     <ClInclude Include="Bg.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="DirectX11.h" />
     <ClInclude Include="Fps.h" />
     <ClInclude Include="GameObject.h" />
