DirectX11からShader関連をShaderクラスに分割。シェーダーのテストのためにTestPlayerを作成。

--- a/SplaShooter.vcxproj
+++ b/SplaShooter.vcxproj
@@ -154,6 +154,9 @@
     <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SettingShader.cpp" />
+    <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="TestPlayer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -168,6 +171,9 @@
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="SettingShader.h" />
+    <ClInclude Include="Shader.h" />
+    <ClInclude Include="TestPlayer.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="pixelShader.cso" />
