--- a/SplaShooter.vcxproj.filters
+++ b/SplaShooter.vcxproj.filters
@@ -175,12 +175,24 @@
     <None Include="vertexShader.cso">
       <Filter>リソース ファイル\Shader\Vertex</Filter>
     </None>
+    <None Include="waterVS.cso">
+      <Filter>リソース ファイル\Shader\Vertex</Filter>
+    </None>
+    <None Include="waterPS.cso">
+      <Filter>リソース ファイル\Shader\Pixel</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="pixelShader.hlsl">
       <Filter>リソース ファイル\Shader\Pixel</Filter>
     </FxCompile>
     <FxCompile Include="vertexShader.hlsl">
+      <Filter>リソース ファイル\Shader\Vertex</Filter>
+    </FxCompile>
+    <FxCompile Include="waterPS.hlsl">
+      <Filter>リソース ファイル\Shader\Pixel</Filter>
+    </FxCompile>
+    <FxCompile Include="waterVS.hlsl">
       <Filter>リソース ファイル\Shader\Vertex</Filter>
     </FxCompile>
   </ItemGroup>
